--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <div class="nav">
             <div class="lnav">
-                <a href="">HOME</a>
-                <a href="">ABOUT</a>
-                <a href="">PORTFOLIO</a>
-                <a href="">CONTACT</a>
+                <a href="#home">HOME</a>
+                <a href="#aboutme">ABOUT</a>
+                <a href="#portfolio">PORTFOLIO</a>
+                <a href="#contact">CONTACT</a>
             </div>
             <div class="rnav">
                <a href=""><span class="material-symbols-outlined">
@@ -23,15 +23,15 @@
             </div>
         </div>
     </header>
-    <div class="heroimg">
+    <div class="heroimg" id="home">
         <h1>My Website Logo</h1>
     </div>
-    <div class="aboutme">
+    <div class="aboutme" id="aboutme">
         <h1>ABOUT ME</h1>
         <em>I love photography</em>
         <p>We have created a fictional "personal" website/blog, and our fictional character is a hobby photographer. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
-    <div class="myname">
+    <div class="myname" >
         <div><h3>My Name</h3>
             <img src="WhatsApp Image 2024-10-16 at 20.03.45_fe5e674b.jpg" alt="">
         </div>
@@ -54,6 +54,73 @@
             </div>
         </div>
     </div>
-    <div></div>
+    <div class="break">
+        <div>
+            <h1>14+</h1>
+            <p>Partners</p>
+        </div>
+        <div>
+            <h1>55+</h1>
+            <p>Projects Done</p>
+        </div>
+        <div>
+            <h1>89+</h1>
+            <p>Happy Clients</p>
+        </div>
+        <div>
+            <h1>150+</h1>
+            <p>Meetings</p>
+        </div>
+    </div>
+    <div class="portfolioimg">
+        <p>PORTFOLIO</p>
+    </div>
+    <div class="mywork" id="portfolio">
+        <h2>MY WORK</h2>
+        <i>Here are some of my latest lorem work ipsum tipsum.</i><br>
+        <i>Click on the images to make them bigger</i>
+        <div class="myworkimg">
+            <div><img src="p1.jpg" alt=""></div>
+            <div><img src="p2.jpg" alt=""></div>
+            <div><img src="p3.jpg" alt=""></div>
+            <div><img src="p4.jpg" alt=""></div>
+            <div><img src="p5.jpg" alt=""></div>
+            <div><img src="p6.jpg" alt=""></div>
+            <div><img src="p7.jpg" alt=""></div>
+            <div><img src="p8.jpg" alt=""></div>
+        </div>
+    </div>
+    <div class="loadmore">
+        <button>LOAD MORE</button>
+    </div>
+    <div class="contactimg">
+        <p>CONTACT</p>
+    </div>
+    <div class="whereiwork" id="contact">
+        <div class="head">
+            <h2>WHERE I WORK</h2>
+            <i>I'd love your feedback!</i></div>
+        <div class="connect">
+            <div>
+                <img src="map.jpg" alt="">
+            </div>
+            <div>
+                <p>Chicago, US</p>
+                <p> Phone: +00 151515</p>
+                <p>Email: mail@mail.com</p>
+                <p>Swing by for a cup of , or leave me a note:</p>
+                <form action="">
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email">
+                    <br>
+                    <input type="text" placeholder="Message" id="msg">
+                    <button>SEND Message</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <a href="#home">To the top</a>
+    </footer>
 </body>
 </html>
